--- a/tapl.cabal
+++ b/tapl.cabal
@@ -19,5 +19,6 @@ executable tapl
     base   >=4.9 && <4.10,
     parsec,
     text
+  ghc-options:         -Wall
   hs-source-dirs:      src
   default-language:    Haskell2010
